--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "appslabke/lara-izitoast": "^1.1",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
